# CARA

./: CMakeLists.txt  Makefile  README.md  install_libs.sh  main.c
headers/audio_tools/: audio_visualizer.h  beat_track.h  onset.h  spectral_features.h  tempo.h
headers/libheatmap/: heatmap_tools.h
headers/png_tools/: png_tools.h
headers/utils/: bench.h  cli.h  compat.h
src/audio_tools/: audio_io.c  audio_visualizer.c  beat_track.c  onset.c  spectral_features.c  tempo.c
src/libheatmap/: heatmap.c  heatmap_tools.c
src/libheatmap/colorschemes/builtin/: scheme.c
src/libheatmap/colorschemes/opencv_like/: cividis.c  scheme.c
src/png_tools/: png_tools.c
src/utils/: bench.c  cli.c  ftype_detect.c
tests/: compare_cara_librosa_beat.py  compare_cara_librosa_onset.py  compare_cara_librosa_tempo.py  test_beat_track.c  test_onset.c  test_tempo.c
